<resources>
    <string name="app_name">newLogin</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="input_name">Input name</string>
    <string name="Password">Password </string>
    <string name="not_a_member_sign_up"> New user? Sign up</string>
    <string name="Login"> Login</string>
    <string name="Already_a_member_Login"> Already a member? Login</string>
    <string name="Create_account">Create account</string>
    <string name="logo"> Logo </string>
    <string name="enter_name">Enter Name</string>
    <string name="Enter_email">Email</string>
    <string name="button">Create account</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_create">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="men">men</string>
    <string name="checkbox">CheckBox</string>
    <string name="todo">TODO</string>
    <string name="open"> Open </string>
    <string name="close"> Close </string>
    <string name="userdetails">User Details</string>
    <string name="wcome"> Welcome </string>
    <string name="Logout"> Logout </string>
    <string name="abt"> About us </string>
    <string name="i_am">I am :</string>
    <string name="abt_me"> About me </string>
    <string name="set">Settings</string>
    <string name="id_photo">Id</string>
    <string name="user">User</string>
    <string name="welcome">Welcome</string>
    <string name="to_my_first_app">to my android app!</string>
    <string name="enter">Enter</string>
    <string name="name1">TextView</string>
    <string name="userimg">TODO</string>
    <string name="gen">TextView</string>
    <string name="use">TextView</string>
    <string name="gender">Name</string>
    <string name="em">TextView</string>
    <string name="e">TextView</string>


</resources>
