<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/down"
    tools:context="com.android.newlogin.Splash">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/to_my_first_app"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/down2"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"

            android:background="@drawable/buttonstyle"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/enter"
            android:textAlignment="center"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>
