<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.newlogin.CreateActivity">

    <include
        layout="@layout/content_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@android:color/holo_orange_light"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/fab"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/signup1" />

    <EditText
        android:id="@+id/textView2"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginTop="130dp"
        android:drawableStart="@drawable/ic_action_user"
        android:focusable="true"
        android:hint="@string/enter_name"
        android:inputType="text|textPersonName"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="#FFF7FFFE"
        android:textColorHint="#FFF7FFFE"
        android:textSize="16sp"
        tools:text="@string/enter_name" />

    <EditText
        android:id="@+id/textView3"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_action_email"
        android:focusable="true"
        android:hint="@string/Enter_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="#FFF7FFFE"
        android:textColorHint="#FFF7FFFE"
        android:textSize="16sp"
        tools:text="@string/Enter_email" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:focusable="true"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="#FFF7FFFE"
        android:textColorHint="#FFF7FFFE"
        android:textSize="16sp"
        tools:text="@string/Password" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@android:color/holo_orange_dark"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cardView2"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/Create_account"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_below="@+id/cardView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Already_a_member_Login"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff299f"
        android:textSize="18sp" />

       <!-- <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/mal" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toEndOf="@+id/imageView2"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fem" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignTop="@+id/imageButton"
        android:layout_marginTop="10dp"
        android:text="@string/i_am"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp" />

        -->


</RelativeLayout>
